--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,7 @@
-@import "reset";
-
 body {
   background-color: aliceblue;
   color: rgb(0, 49, 0);
+  font-size: 10px;
   form {
     border: 10px solid;
   }
